--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,5 @@
     <string name="section_discover">发现</string>
     <string name="selection">选集</string>
 
-    <string name="app_name">SakuraAnime</string>
+    <string name="app_name">PiliPili</string>
 </resources>
